feat: expose java packages as es6 modules

--- a/ide/ui/ide-monaco/src/main/resources/META-INF/dirigible/ide-monaco/editor.html
+++ b/ide/ui/ide-monaco/src/main/resources/META-INF/dirigible/ide-monaco/editor.html
@@ -69,6 +69,12 @@
                     extension: ".mjs",
                     type: "javascript"
                 }, {
+                    extension: ".ts",
+                    type: "typescript"
+                }, {
+                    extension: ".kt",
+                    type: "kotlin"
+                }, {
                     extension: ".html",
                     type: "html"
                 }, {
