--- a/ide/ui/ide-workbench/src/main/resources/META-INF/dirigible/ide/index.html
+++ b/ide/ui/ide-workbench/src/main/resources/META-INF/dirigible/ide/index.html
@@ -62,6 +62,7 @@
         <div class="sidebar list-group" sidebar active="Workbench"></div>
         <div id="workbench" class="plane" views-layout views-layout-model="wb.layoutModel"></div>
     </div>
+    <div alert></div>
     <div class="statusbar" status-bar>{{message}}</div>
 
     <script type="text/javascript">
