--- a/modules/bpm/bpm-resources/ide-bpm/src/main/resources/META-INF/dirigible/ide-bpm/index.html
+++ b/modules/bpm/bpm-resources/ide-bpm/src/main/resources/META-INF/dirigible/ide-bpm/index.html
@@ -98,13 +98,13 @@
     <script src="scripts/jquery-2.0.3.min.js"></script>
     <script src="libs/jquery-ui-1.10.3.custom.min.js"></script>
 
-    <script src="/webjars/angularjs/1.4.7/angular.min.js"></script>
-    <script src="/webjars/angularjs/1.4.7/angular-animate.min.js"></script>
+    <script src="libs/angular/1.4.7/angular.min.js"></script>
+    <script src="libs/angular/1.4.7/angular-animate.min.js"></script>
     <script src="/webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="/webjars/angularjs/1.4.7/angular-resource.min.js"></script>
-    <script src="/webjars/angularjs/1.4.7/angular-cookies.min.js"></script>
-    <script src="/webjars/angularjs/1.4.7/angular-sanitize.min.js"></script>
-    <script src="/webjars/angularjs/1.4.7/angular-route.min.js"></script>
+    <script src="libs/angular/1.4.7/angular-resource.min.js"></script>
+    <script src="libs/angular/1.4.7/angular-cookies.min.js"></script>
+    <script src="libs/angular/1.4.7/angular-sanitize.min.js"></script>
+    <script src="libs/angular/1.4.7/angular-route.min.js"></script>
     <script src="libs/angular-translate_2.15.1/angular-translate.min.js"></script>
     <script src="libs/angular-translate-storage-cookie/angular-translate-storage-cookie.js"></script>
     <script src="libs/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
