--- a/ide/ui/ide-monaco/src/main/resources/META-INF/dirigible/ide-monaco/editor.html
+++ b/ide/ui/ide-monaco/src/main/resources/META-INF/dirigible/ide-monaco/editor.html
@@ -12,6 +12,7 @@
 	<script type="text/javascript" src="/services/v4/web/ide-core/ui/message-hub.js"></script>
 	<script type="text/javascript" src="/services/v4/js/theme/resources.js/monaco.js"></script>
 	<script type="text/javascript" src="monaco-editor/min/vs/loader.js"></script>
+	<script type="text/javascript" src="js/formatters/css-format-monaco.min.js"></script>
 	<script type="text/javascript" src="js/assignmentsParser.js"></script>
 </head>
 
