--- a/ide/ui/ide-database/src/main/resources/META-INF/dirigible/ide-database/sql/editor.html
+++ b/ide/ui/ide-database/src/main/resources/META-INF/dirigible/ide-database/sql/editor.html
@@ -85,7 +85,7 @@
 
                 // An optional array of keybindings for the action.
                 keybindings: [
-                    monaco.KeyMod.CtrlCmd | monaco.KeyCode.KEY_X
+                    monaco.KeyMod.CtrlCmd | monaco.KeyCode.KeyX
                 ],
 
                 // Method that will be executed when the action is triggered.
