--- a/ide/ui/ide-monaco/src/main/resources/META-INF/dirigible/ide-monaco/diff-view.html
+++ b/ide/ui/ide-monaco/src/main/resources/META-INF/dirigible/ide-monaco/diff-view.html
@@ -1,205 +1,215 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="Content-Language" content="en-us">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Diff Monaco Editor</title>
-    <link type="text/css" data-name="monaco-editor/min/vs/editor/editor.main" rel="stylesheet"
-        href="monaco-editor/min/vs/editor/editor.main.css">
-    <style>
-        body {
-            overflow: hidden;
-            height: 100%;
-        }
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="Content-Language" content="en-us" />
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <title>Diff Monaco Editor</title>
+        <link type="text/css" data-name="monaco-editor/min/vs/editor/editor.main" rel="stylesheet"
+            href="monaco-editor/min/vs/editor/editor.main.css" />
+        <link type="text/css" rel="stylesheet" href="/services/v4/js/theme/resources.js/monaco.css" />
+        <script type="text/javascript" src="/services/v4/web/ide-core/ui/message-hub.js"></script>
+        <script type="text/javascript" src="/services/v4/js/theme/resources.js/monaco.js"></script>
+    </head>
 
-        #diffEditor {
-            margin: 0;
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-        }
-    </style>
-    <script type="text/javascript" src="/services/v4/web/ide-core/ui/message-hub.js"></script>
-    <script type="text/javascript" src="/services/v4/js/theme/resources.js/monaco.js"></script>
-</head>
+    <body id="diff-browser" spellcheck="false">
 
-<body id="diff-browser" spellcheck="false">
+        <div class="loading-overview">
+            <div class="loading-message">Loading...</div>
+        </div>
 
-    <div id="diffEditor"></div>
+        <div id="embeddedEditor"></div>
 
-    <script type="text/javascript" src="monaco-editor/min/vs/loader.js"></script>
-    <script>
-        let messageHub = new FramesMessageHub();
-        let csrfToken;
-        let dirty = false;
-        let diffEditor;
+        <script type="text/javascript" src="monaco-editor/min/vs/loader.js"></script>
+        <script>
+            let loadingOverview = document.getElementsByClassName('loading-overview')[0];
+            let loadingMessage = document.getElementsByClassName('loading-message')[0];
+            let messageHub = new FramesMessageHub();
+            let csrfToken;
+            let dirty = false;
+            let diffEditor;
 
-        function FileIO() {
+            function FileIO() {
+                let __URL = URL;
+                this.gitApiUrl = "/services/v4/ide/git";
 
-            let __URL = URL;
-            this.gitApiUrl = '/services/v4/ide/git';
+                this.resolveFileType = function (file) {
+                    if (!file) return "text";
 
-            this.resolveFileType = function (file) {
-                if (!file) return "text";
+                    let mappings = [
+                        {
+                            extension: ".js",
+                            type: "javascript",
+                        },
+                        {
+                            extension: ".html",
+                            type: "html",
+                        },
+                        {
+                            extension: ".css",
+                            type: "css",
+                        },
+                        {
+                            extension: ".json",
+                            type: "json",
+                        },
+                        {
+                            extension: ".table",
+                            type: "json",
+                        },
+                        {
+                            extension: ".view",
+                            type: "json",
+                        },
+                        {
+                            extension: ".extensionpoint",
+                            type: "json",
+                        },
+                        {
+                            extension: ".extension",
+                            type: "json",
+                        },
+                        {
+                            extension: ".job",
+                            type: "json",
+                        },
+                        {
+                            extension: ".listener",
+                            type: "json",
+                        },
+                        {
+                            extension: ".access",
+                            type: "json",
+                        },
+                        {
+                            extension: ".roles",
+                            type: "json",
+                        },
+                        {
+                            extension: ".command",
+                            type: "json",
+                        },
+                        {
+                            extension: ".xml",
+                            type: "xml",
+                        },
+                        {
+                            extension: ".bpmn",
+                            type: "xml",
+                        },
+                        {
+                            extension: ".xsjs",
+                            type: "javascript",
+                        },
+                    ];
 
-                let mappings = [{
-                    extension: ".js",
-                    type: "javascript"
-                }, {
-                    extension: ".html",
-                    type: "html"
-                }, {
-                    extension: ".css",
-                    type: "css"
-                }, {
-                    extension: ".json",
-                    type: "json"
-                }, {
-                    extension: ".table",
-                    type: "json"
-                }, {
-                    extension: ".view",
-                    type: "json"
-                }, {
-                    extension: ".extensionpoint",
-                    type: "json"
-                }, {
-                    extension: ".extension",
-                    type: "json"
-                }, {
-                    extension: ".job",
-                    type: "json"
-                }, {
-                    extension: ".listener",
-                    type: "json"
-                }, {
-                    extension: ".access",
-                    type: "json"
-                }, {
-                    extension: ".roles",
-                    type: "json"
-                }, {
-                    extension: ".command",
-                    type: "json"
-                }, {
-                    extension: ".xml",
-                    type: "xml"
-                }, {
-                    extension: ".bpmn",
-                    type: "xml"
-                }, {
-                    extension: ".xsjs",
-                    type: "javascript"
-                }];
-
-                for (let i = 0; i < mappings.length; i++) {
-                    if (file.endsWith(mappings[i].extension)) {
-                        return mappings[i].type;
-                    }
-                }
-
-                return "text";
-            };
-
-            this.loadDiff = function (project, file) {
-                return new Promise((resolve, reject) => {
-                    if (file) {
-                        let url = this.gitApiUrl + "/" + project + "/diff?path=" + file;
-                        let xhr = new XMLHttpRequest();
-                        xhr.open('GET', url);
-                        xhr.setRequestHeader('X-CSRF-Token', 'Fetch');
-                        xhr.onload = () => {
-                            let diff = JSON.parse(xhr.responseText);
-                            resolve({
-                                original: diff.original,
-                                modified: diff.modified
-                            });
-                            csrfToken = xhr.getResponseHeader("x-csrf-token");
-                        };
-                        xhr.onerror = () => reject(xhr.statusText);
-                        xhr.send();
-                    } else {
-                        resolve({
-                            original: "",
-                            modified: ""
-                        });
-                    }
-                });
-            };
-        };
-
-        let fileIO = new FileIO();
-
-        function createEditorInstance() {
-            return new Promise((resolve, reject) => {
-                setTimeout(function () {
-                    try {
-                        let containerEl = document.getElementById('diffEditor');
-                        if (containerEl.childElementCount > 0) {
-                            for (let i = 0; i < containerEl.childElementCount; i++)
-                                containerEl.removeChild(containerEl.children.item(i));
+                    for (let i = 0; i < mappings.length; i++) {
+                        if (file.endsWith(mappings[i].extension)) {
+                            return mappings[i].type;
                         }
-                        let editor = monaco.editor.createDiffEditor(containerEl, {
-                            automaticLayout: true,
-                            readOnly: true
-                        });
-
-                        monaco.editor.createDiffNavigator(editor, {
-                            followsCaret: true,
-                            ignoreCharChanges: true
-                        });
-                        resolve(editor);
-                        window.onresize = function () {
-                            diffEditor.layout();
-                        };
-                    } catch (err) {
-                        reject(err);
                     }
+
+                    return "text";
+                };
+
+                this.loadDiff = function (project, file) {
+                    return new Promise((resolve, reject) => {
+                        if (file) {
+                            let url = this.gitApiUrl + "/" + project + "/diff?path=" + file;
+                            let xhr = new XMLHttpRequest();
+                            xhr.open("GET", url);
+                            xhr.setRequestHeader("X-CSRF-Token", "Fetch");
+                            xhr.onload = () => {
+                                let diff = JSON.parse(xhr.responseText);
+                                resolve({
+                                    original: diff.original,
+                                    modified: diff.modified,
+                                });
+                                csrfToken = xhr.getResponseHeader("x-csrf-token");
+                            };
+                            xhr.onerror = () => reject(xhr.statusText);
+                            xhr.send();
+                        } else {
+                            resolve({
+                                original: "",
+                                modified: "",
+                            });
+                        }
+                    });
+                };
+            }
+
+            let fileIO = new FileIO();
+
+            function createEditorInstance() {
+                return new Promise((resolve, reject) => {
+                    setTimeout(function () {
+                        try {
+                            let containerEl = document.getElementById("embeddedEditor");
+                            if (containerEl.childElementCount > 0) {
+                                for (let i = 0; i < containerEl.childElementCount; i++)
+                                    containerEl.removeChild(containerEl.children.item(i));
+                            }
+                            let editor = monaco.editor.createDiffEditor(containerEl, {
+                                automaticLayout: true,
+                                readOnly: true,
+                                scrollBeyondLastLine: false,
+                                enableSplitViewResizing: false,
+                            });
+
+                            monaco.editor.createDiffNavigator(editor, {
+                                followsCaret: true,
+                                ignoreCharChanges: true,
+                            });
+                            resolve(editor);
+                            window.onresize = function () {
+                                diffEditor.layout();
+                            };
+                            if (loadingOverview) loadingOverview.classList.add("hide");
+                        } catch (err) {
+                            reject(err);
+                        }
+                    });
                 });
-            });
-        };
+            }
 
-        (function init() {
-            require.config({ paths: { 'vs': 'monaco-editor/min/vs' } });
+            (function init() {
+                require.config({ paths: { vs: "monaco-editor/min/vs" } });
 
-            require(['vs/editor/editor.main'], function () {
-                createEditorInstance()
-                    .then((editor) => {
+                require(["vs/editor/editor.main"], function () {
+                    createEditorInstance().then((editor) => {
                         diffEditor = editor;
                         diffEditor.setModel({
                             original: monaco.editor.createModel("", "text"),
-                            modified: monaco.editor.createModel("", "text")
+                            modified: monaco.editor.createModel("", "text"),
                         });
                     });
-                monaco.editor.setTheme(monacoTheme);
-            })
+                    monaco.editor.setTheme(monacoTheme);
+                });
 
-            messageHub.subscribe(function (msg) {
-                let project = msg.data.project;
-                let file = msg.data.file;
-                fileIO.loadDiff(project, file)
-                    .then((diff) => {
+                messageHub.subscribe(function (msg) {
+                    if (loadingOverview) loadingOverview.classList.remove("hide");
+                    let project = msg.data.project;
+                    let file = msg.data.file;
+                    fileIO.loadDiff(project, file).then((diff) => {
                         let fileType = fileIO.resolveFileType(file);
                         diffEditor.setModel({
                             original: monaco.editor.createModel(diff.original, fileType),
-                            modified: monaco.editor.createModel(diff.modified, fileType)
+                            modified: monaco.editor.createModel(diff.modified, fileType),
                         });
+                        if (loadingOverview) loadingOverview.classList.add("hide");
                     });
-            }, "git.staging.file.diff");
+                }, "git.staging.file.diff");
 
-            messageHub.subscribe(function () {
-                diffEditor.setModel({
-                    original: monaco.editor.createModel("", "text"),
-                    modified: monaco.editor.createModel("", "text")
-                });
-            }, "git.diff.view.clear");
-        })();
-
-    </script>
-</body>
+                messageHub.subscribe(function () {
+                    diffEditor.setModel({
+                        original: monaco.editor.createModel("", "text"),
+                        modified: monaco.editor.createModel("", "text"),
+                    });
+                }, "git.diff.view.clear");
+            })();
+        </script>
+    </body>
 
 </html>
